Paper's from Kenny

--- a/docs/issues/2024-07.rst
+++ b/docs/issues/2024-07.rst
@@ -43,7 +43,23 @@ LLMs
     A conformal-based post-processing method for LLMs which tells you the probability that the output contains zero false statements.  Really cool idea in theory, but in their one example you end either having a low(ish) probability or not saying anything useful.  I suppose this tells us something useful about LLMs.  
 
 `Transcendence: Generative Models Can Outperform The Experts That Train Them <https://arxiv.org/pdf/2406.11741>`_
-When training with low-temperature sampling, LLMs can outperform the training data: this paper showed this by training an LLM to play chess with an elo rating of 1400 on a bunch of games played by players with 1000 elo rating.  Low temperature sampling encourages the model to behave like an ensemble model with majority voting over the input games when choosing a move.  Morally, this is similar to how Depth Anything V2 was trained, where the student transcended the synthetic labels from the teacher, and indicates that this might be a general phenomena and probably somthing we wish to leverage.
+    When training with low-temperature sampling, LLMs can outperform the training data: this paper showed this by training an LLM to play chess with an elo rating of 1400 on a bunch of games played by players with 1000 elo rating.  Low temperature sampling encourages the model to behave like an ensemble model with majority voting over the input games when choosing a move.  Morally, this is similar to how Depth Anything V2 was trained, where the student transcended the synthetic labels from the teacher, and indicates that this might be a general phenomena and probably somthing we wish to leverage.
+
+`Using an LLM to Compete in an AGI Banchmark<https://redwoodresearch.substack.com/p/getting-50-sota-on-arc-agi-with-gpt>`_
+    There is something interesting here. LLMs can kind of compete in AGI benchmarks that require a lot of reasoning, but they involve so much prompt enginnering that maybe you would have been better writting code instead of orchestration code.
+
+`Getting Structured Output from LLMs <https://www.boundaryml.com/blog/structured-output-from-llms>`_
+    To us, LLMs are primarily tools to turn text in to structured information. What python tools are there to get you there? Here is a comparison.
+
+`Logit Prisms <https://neuralblog.github.io/logit-prisms/>`_
+    Comes up with a method to read the tea leaves of logits coming out of an LLM. I'm not very convinced, but this has some similarities to what Miles is sometimes interested in.
+
+`ShortGPT: Layers in Large Language Models are More Redundant Than You Expect <https://arxiv.org/abs/2403.03853>`_
+    Asserts that a lot of the layers in an LLM are redundant. They introduce a metric that looks at a section of weights and decides to kill it off. Apparently you can make things much smaller. This is independent of quantization which can also be applied.
+
+`Refusal in Language Models Is Mediated by a Single Direction <https://arxiv.org/abs/2406.11717>`_
+    The RLHF that tells the LLM to be nice and refuse to answer sometimes, apparently is findiable in the gradients during runtime. If you just remove that dimension with a hack, you get an uncensored LLM from your censored weights.
+
 Ethics
 ------
 `The Impossibility of Fair LLMs <https://arxiv.org/pdf/2406.03198>`_
@@ -57,6 +73,14 @@ Ethics
 
 `"You Gotta be a Doctor, Lin": An Investigation of Name-Based Bias of Large Language Models in Employment Recommendations <https://arxiv.org/pdf/2406.12232>`_
     If you put an LLM in charge of hiring decisions, it will assume their race and gender based on their resume and make hiring decisions using gendered/racial stereotypes.  Not surprising.
+
+Box Networks
+------------
+`YOLOv9: Learning What You Want to Learn Using Programmable Gradient Information <https://arxiv.org/abs/2402.13616>`_
+    Another YOLO on the pile. What even is a YOLO? This just tweaks the layer type in the backbone. To me it seemed complicated, but maybe it could be a drop in replacement for the backbone?
+
+`YOLOv10: Real-Time End-to-End Object Detection <https://arxiv.org/abs/2405.14458>`_
+    Yet another YOLO on the pile. And get this, this one is better! Line go up! This one is a little more interesting because it drops the NMS step and builds it into the network. YOLO8 was basically centernet, now this might be an improvement upon the centernet we know and love.
 
 Doctrinaire
 -----------
