--- a/docs/issues/2024-07.rst
+++ b/docs/issues/2024-07.rst
@@ -141,11 +141,11 @@ New Models
 Lunch and Learn
 ---------------
 2024-06-04
-    `Matching Anything by Segmenting Anything <https://arxiv.org/abs/2406.04221>`
+    `Matching Anything by Segmenting Anything <https://arxiv.org/abs/2406.04221>`_
         Building a generalized tracker using SAM as a backbone. Provided adapter empowers foundational models to track any objects they have detected, and shows strong zero-shot tracking ability in complex domains. Interesting synthetic training method with good results.
 
 2024-06-11
-    `Code as Policies: Language Model Programs for Embodied Control <https://code-as-policies.github.io>`
+    `Code as Policies: Language Model Programs for Embodied Control <https://code-as-policies.github.io>`_
         Using LLMs to control robots. LLM builds up its own library of funcitonality using provided robot API. Recursively defines functions to do complex geometric tasks in real world. Seems like a good path for reasoning and knowledge graphs.
 
 2024-06-18
